--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,17 @@
     </div>
   </nav>
   
-  <div class="static-white-text">
-    <h1>Thanks for visiting my site!</h1>
-    <p>I'd greatly appreciate the opportunity to connect to share further information about my experiences.</p>
-    <p>Please feel welcome to contact me through the options below.</p>
-    <p><a href="https://www.linkedin.com/in/elaynaseguin/" target="_blank">LinkedIn: https://www.linkedin.com/in/elaynaseguin/</a></p>
-    <p><a href="mailto:elaynacodes@gmail.com" target="_blank">Email: elaynacodes@gmail.com</a></p>
+  <div class="static-text-wrapper">
+    <br><br><br><br><br><br><br><br><br>
+    <div class="static-white-text">
+      <h1>Thanks for visiting my site!</h1>
+      <p>I'd greatly appreciate the opportunity to connect to share further information about my experiences.</p>
+      <p>Please feel welcome to contact me through the options below.</p>
+      <p><a href="https://www.linkedin.com/in/elaynaseguin/" target="_blank">LinkedIn: https://www.linkedin.com/in/elaynaseguin/</a></p>
+      <p><a href="mailto:elaynacodes@gmail.com" target="_blank">Email: elaynacodes@gmail.com</a></p>
 
 
+    </div>
   </div>
 
   <!-- Footer section -->
