--- a/project.html
+++ b/project.html
@@ -17,10 +17,13 @@
     </div>
   </nav>
   
-  <div class="static-white-text">
-    <h1>Projects</h1>
-    <a href="launcher.html">Automatic Ball Launcher</a><br>
-    <a href="navSystem.html">Vision-Aided Navigation System (Under Construction)</a>
+  <div class="static-text-wrapper">
+    <br><br><br><br><br><br><br><br><br>
+    <div class="static-white-text">
+      <h1>Projects</h1>
+      <a href="launcher.html">Automatic Ball Launcher</a><br>
+      <a href="navSystem.html">Vision-Aided Navigation System (Under Construction)</a>
+    </div>
   </div>
 
   <footer class="footer">
