--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </section>
   </div>
 
+  <!-- Footer section -->
   <footer class="footer">
     <div class="footer-content">
       <a href="mailto:elaynacodes@gmail.com">Email</a> | 
