--- a/launcher.html
+++ b/launcher.html
@@ -16,27 +16,29 @@
       <a href="contact.html">Contact</a>
     </div>
   </nav>
-  
-  <div class="static-white-text project-page">
-    <h1 class="project-title">Pawfect Treat Thrower</h1>
-    <div class="project-links">
-      <a href="https://github.com/ElaynaSeguin/PawfectTreatThrowerProject" target="_blank">GitHub Repository</a>
+  <div class="static-text-wrapper">
+    <br><br><br><br><br><br><br><br><br>
+    <div class="static-white-text project-page">
+        <h1 class="project-title">Pawfect Treat Thrower</h1>
+        <div class="project-links">
+        <a href="https://github.com/ElaynaSeguin/PawfectTreatThrowerProject" target="_blank">GitHub Repository</a>
+        </div>
+        <div class="video-container">
+        <video autoplay controls muted>
+            <source src="launcherdemo.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Browser does not support this tag.
+        </video>
+        </div>
+        <div class="project-summary">
+        <p>- Led electrical and software development, collaborating with mechanical lead and project manager to select project
+        topic, hardware components, and developing software workflow and schematic for use with a Pico microcontroller<br><br>
+        - Designed and implemented control algorithms for sensor initialization, obstacle detection, and motor control<br><br>
+        - Conducted robust debugging of circuit incorporating an IR break beam sensor, HC-SR04 ultrasonic sensor, PMDC
+        motors, 28BYJ-48 stepper motor, and servo motor, integrating L298N and ULN2003 motor driver boards<br></p>
+        </div>
     </div>
-    <div class="video-container">
-      <video autoplay controls muted>
-        <source src="launcherdemo.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
-        Browser does not support this tag.
-      </video>
     </div>
-    <div class="project-summary">
-      <p>- Led electrical and software development, collaborating with mechanical lead and project manager to select project
-    topic, hardware components, and developing software workflow and schematic for use with a Pico microcontroller<br><br>
-    - Designed and implemented control algorithms for sensor initialization, obstacle detection, and motor control<br><br>
-    - Conducted robust debugging of circuit incorporating an IR break beam sensor, HC-SR04 ultrasonic sensor, PMDC
-    motors, 28BYJ-48 stepper motor, and servo motor, integrating L298N and ULN2003 motor driver boards<br></p>
-    </div>
-  </div>
 
   <!-- Footer section -->
   <footer class="footer">
